--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@
 # next.js
 /.next/
 /out/
+/.open-next/
+
+# cloudflare workers local files
+.wrangler/
+.dev.vars*
+!.dev.vars.example
 
 # production
 /build
